--- a/src/app/group/view-group-list/view-group-list.component.html
+++ b/src/app/group/view-group-list/view-group-list.component.html
@@ -1,1 +1,5 @@
 <p>view-group-list works!</p>
+<!-- demo links to show routings -->
+<a routerLink="./add">add</a><br>
+<a routerLink="./edit">edit</a>
+<router-outlet></router-outlet>
