--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -1,5 +1,5 @@
 // imports
-@import '../../common-scss/color.scss';
+@import '../../../assets/scss/color.scss';
 // -----------------------------------------------login form css------------------------------------------------
 .container {
     width: 100vw;
