--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 </nav>
-<!-- menus after click on bars -->
+<!-- menus after click on navbar menu -->
 <div class="collapse" id="navbarToggleExternalContent">
     <div class="bg-dark p-4">
         <ul class="navbar-nav ">
@@ -40,10 +40,8 @@
 <!-- show component in routing -->
 <router-outlet></router-outlet>
 
-
 <!-- footer  -->
 <footer class="container py-3 my-4">
     <hr>
-
     <p class="text-center text-muted">SplitWise</p>
 </footer>
