--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       </button>
 
         <!-- nav bar links if not login -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="router.url != '/dashboard' && router.url != '/group'">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="isCurrentUrl('/dashboard') && isCurrentUrl('/group')">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <a class="nav-link text-light" routerLink="/login">Login</a>
@@ -23,7 +23,7 @@
         </div>
 
         <!-- nav bar links after login -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="router.url == '/dashboard' || router.url == '/group'">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="isCurrentUrl('/dashboard') || isCurrentUrl('/group')">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <div class="dropdown">
@@ -31,8 +31,9 @@
                     Dropdown button
                   </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" routerLink="/">Logout</a></li>
+                            <li *ngFor="let dropdownMenu of dropdownMenus">
+                                <a class="dropdown-item" href="#">{{dropdownMenu}}</a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -43,7 +44,7 @@
 <!-- menus after click on navbar menu -->
 <div class="collapse" id="navbarToggleExternalContent">
     <!-- if not login then show this -->
-    <div class="bg-dark p-4" *ngIf="router.url != '/dashboard' && router.url != '/group'">
+    <div class="bg-dark p-4" *ngIf="isCurrentUrl('/dashboard') && isCurrentUrl('/group')">
         <ul class="navbar-nav ">
             <li class="nav-item">
                 <a class="nav-link text-light" routerLink="/login">Login</a>
@@ -55,7 +56,7 @@
     </div>
 
     <!-- if login done then show this  -->
-    <div class="bg-dark p-4" *ngIf="router.url == '/dashboard' || router.url == '/group'">
+    <div class="bg-dark p-4" *ngIf="isCurrentUrl('/dashboard') || isCurrentUrl('/group')">
 
         <ul class="navbar-nav text-white">
             <li class="nav-item"><a class="dropdown-item" href="#">Profile</a></li>
