--- a/src/app/group/add-edit-group/add-edit-group.component.html
+++ b/src/app/group/add-edit-group/add-edit-group.component.html
@@ -65,7 +65,6 @@
     <!-- submit button -->
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" routerLink="/group">Close</button>
-        <button type="submit" class="btn btn-primary" *ngIf="router.url == '/group/add'">Save changes</button>
-        <button type="submit" class="btn btn-primary" *ngIf="router.url == '/group/edit'">Save changes</button>
+        <button type="submit" class="btn btn-primary" (click)="isCurrentUrl('/group/add') ? onSubmit() : onUpdate()">Save changes</button>
     </div>
 </form>
