--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,19 +11,19 @@
       </button>
 
         <!-- nav bar links if not login -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="isCurrentUrl('/dashboard') && isCurrentUrl('/group')">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="isLoginSignupActive">
             <ul class="navbar-nav">
-                <li class="nav-item ">
-                    <a class="nav-link text-light" routerLink="/login">Login</a>
+                <li class="nav-item" *ngIf="!isLoginActive">
+                    <button class="btn btn-primary ml-md-2" routerLink="/login">Login</button>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="!isSignupActive">
                     <button class="btn btn-primary ml-md-2" type="button" routerLink="/signup">Sign Up</button>
                 </li>
             </ul>
         </div>
 
         <!-- nav bar links after login -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="isCurrentUrl('/dashboard') || isCurrentUrl('/group')">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="!isLoginSignupActive">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <div class="dropdown">
@@ -44,19 +44,19 @@
 <!-- menus after click on navbar menu -->
 <div class="collapse" id="navbarToggleExternalContent">
     <!-- if not login then show this -->
-    <div class="bg-dark p-4" *ngIf="isCurrentUrl('/dashboard') && isCurrentUrl('/group')">
+    <div class="bg-dark p-4" *ngIf="isLoginSignupActive">
         <ul class="navbar-nav ">
-            <li class="nav-item">
-                <a class="nav-link text-light" routerLink="/login">Login</a>
+            <li class="nav-item" *ngIf="!isLoginActive">
+                <button class="btn btn-primary ml-md-2" routerLink="/login">Login</button>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="!isSignupActive">
                 <button class="btn btn-primary ml-md-2" type="button" routerLink="/signup">Sign Up</button>
             </li>
         </ul>
     </div>
 
     <!-- if login done then show this  -->
-    <div class="bg-dark p-4" *ngIf="isCurrentUrl('/dashboard') || isCurrentUrl('/group')">
+    <div class="bg-dark p-4" *ngIf="!isLoginSignupActive">
 
         <ul class="navbar-nav text-white">
             <li class="nav-item"><a class="dropdown-item" href="#">Profile</a></li>
