--- a/src/app/user/login/login.component.scss
+++ b/src/app/user/login/login.component.scss
@@ -35,7 +35,7 @@
                 // -----------------------------form button style-------------------------------------------------
                 button {
                     width: 100%;
-                    background-color: $green;
+                    background-color: $blue;
                     color: $white;
                     padding: 8px 16px;
                     margin: 8px 0;
@@ -45,7 +45,7 @@
                 }
                 a {
                     text-decoration: none;
-                    color: $green;
+                    color: $blue;
                 }
             }
         }
