--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,32 +7,33 @@
 
         <!-- toggler button -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
         <!-- nav bar links if not login -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="router.url != '/dashboard'">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="isLoginSignupActive">
             <ul class="navbar-nav">
-                <li class="nav-item ">
-                    <a class="nav-link text-light" routerLink="/login">Login</a>
+                <li class="nav-item" *ngIf="!isLoginActive">
+                    <button class="btn btn-primary ml-md-2" routerLink="/login">Login</button>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="!isSignupActive">
                     <button class="btn btn-primary ml-md-2" type="button" routerLink="/signup">Sign Up</button>
                 </li>
             </ul>
         </div>
 
         <!-- nav bar links after login -->
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="router.url == '/dashboard'">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav" *ngIf="!isLoginSignupActive">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <div class="dropdown">
                         <button class="btn text-light dropdown-toggle" type="button" id="profileDropdown" data-bs-toggle="dropdown">
-                      Dropdown button
-                    </button>
+                    Dropdown button
+                  </button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" routerLink="/">Logout</a></li>
+                            <li *ngFor="let dropdownMenu of dropdownMenus">
+                                <a class="dropdown-item" href="#">{{dropdownMenu}}</a>
+                            </li>
                         </ul>
                     </div>
                 </li>
@@ -43,23 +44,22 @@
 <!-- menus after click on navbar menu -->
 <div class="collapse" id="navbarToggleExternalContent">
     <!-- if not login then show this -->
-    <div class="bg-dark p-4" *ngIf="router.url != '/dashboard'">
-        <ul class="navbar-nav ">
-            <li class="nav-item">
-                <a class="nav-link text-light" routerLink="/login">Login</a>
+    <div class="bg-dark p-4 " *ngIf="isLoginSignupActive">
+        <ul class="navbar-nav container">
+            <li class="nav-item" *ngIf="!isLoginActive">
+                <button class="btn btn-primary ml-md-2" routerLink="/login">Login</button>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngIf="!isSignupActive">
                 <button class="btn btn-primary ml-md-2" type="button" routerLink="/signup">Sign Up</button>
             </li>
         </ul>
     </div>
 
     <!-- if login done then show this  -->
-    <div class="bg-dark p-4" *ngIf="router.url == '/dashboard'">
+    <div class="bg-dark" *ngIf="!isLoginSignupActive">
 
-        <ul class="navbar-nav text-white">
-            <li class="nav-item"><a class="dropdown-item" href="#">Profile</a></li>
-            <li class="nav-item"><a class="dropdown-item" routerLink="/">Logout</a></li>
+        <ul class="navbar-nav text-white container  p-4">
+            <li class="nav-item" *ngFor="let dropdownMenu of dropdownMenus"><a class="dropdown-item" href="#">{{dropdownMenu}}</a></li>
         </ul>
 
     </div>
