--- a/src/app/group/add-edit-group/add-edit-group.component.html
+++ b/src/app/group/add-edit-group/add-edit-group.component.html
@@ -63,6 +63,6 @@
     <!-- submit button -->
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" routerLink="/group">Close</button>
-        <button type="submit" class="btn btn-primary" (click)="isGroupAddActive ? onSubmit() : onUpdate()">Save changes</button>
+        <button type="submit" class="btn btn-primary">Save changes</button>
     </div>
 </form>
