--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,8 +44,8 @@
 <!-- menus after click on navbar menu -->
 <div class="collapse" id="navbarToggleExternalContent">
     <!-- if not login then show this -->
-    <div class="bg-dark p-4" *ngIf="isLoginSignupActive">
-        <ul class="navbar-nav ">
+    <div class="bg-dark p-4 " *ngIf="isLoginSignupActive">
+        <ul class="navbar-nav container">
             <li class="nav-item" *ngIf="!isLoginActive">
                 <button class="btn btn-primary ml-md-2" routerLink="/login">Login</button>
             </li>
@@ -56,12 +56,10 @@
     </div>
 
     <!-- if login done then show this  -->
-    <div class="bg-dark p-4" *ngIf="!isLoginSignupActive">
+    <div class="bg-dark" *ngIf="!isLoginSignupActive">
 
-        <ul class="navbar-nav text-white">
-            <li *ngFor="let dropdownMenu of dropdownMenus">
-                <a class="dropdown-item" href="#">{{dropdownMenu}}</a>
-            </li>
+        <ul class="navbar-nav text-white container  p-4">
+            <li class="nav-item" *ngFor="let dropdownMenu of dropdownMenus"><a class="dropdown-item" href="#">{{dropdownMenu}}</a></li>
         </ul>
 
     </div>
