Add feature expense design

--- a/src/app/group/add-edit-group/add-edit-group.component.html
+++ b/src/app/group/add-edit-group/add-edit-group.component.html
@@ -5,9 +5,9 @@
     <div class="modal-header">
 
         <!-- if clicked on add/ edit  -->
-        <h1 class="modal-title fs-5" id="exampleModalLabel">{{formHeading}}</h1>
+        <h1 class="modal-title fs-5" id="Form-heading">{{formHeading}}</h1>
         <!-- close button -->
-        <button type="button" class="btn-close" data-bs-dismiss="modal" routerLink="/group">.</button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" routerLink="/dashboard/group">.</button>
     </div>
 
     <!-- Form body -->
