--- a/src/app/expense/view-expense-list/view-expense-list.component.html
+++ b/src/app/expense/view-expense-list/view-expense-list.component.html
@@ -1,5 +1,22 @@
-<p>view-expense-list works!</p>
-<!-- demo links to show routings -->
-<a routerLink="./add">add</a><br>
-<a routerLink="./edit">edit</a>
-<router-outlet></router-outlet>
+<ul class="list-group">
+    <li class="list-group-item align-center">
+        <div class="row">
+            <div class="col">Expense</div>
+            <div class="col">Amount</div>
+        </div>
+    </li>
+    <li class="list-group-item" *ngFor="let expense of expenses; index as i">
+        <div class="row">
+            <div class="col">{{expense}}</div>
+            <div class="col">{{amounts[i]}} INR</div>
+        </div>
+    </li>
+</ul>
+
+<div class="modal fade" id="addExpenseForm" tabindex="-1">
+    <div class="modal-dialog ">
+        <div class="modal-content ">
+            <app-add-edit-expence></app-add-edit-expence>
+        </div>
+    </div>
+</div>
