Add required comments in ts file

--- a/src/app/friends/add-edit-friends/add-edit-friends.component.html
+++ b/src/app/friends/add-edit-friends/add-edit-friends.component.html
@@ -23,9 +23,9 @@
 
         <!-- message  -->
         <div class="mb-3">
-            <label for="Textarea" class="form-label fs-5">Message: </label>
+            <label for="textarea" class="form-label fs-5">Message: </label>
             <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="Textarea" style="height: 100px" formControlName="message"></textarea>
+                <textarea class="form-control h-5" placeholder="Leave a comment here" id="textarea" formControlName="message"></textarea>
 
             </div>
         </div>
