--- a/src/app/friends/view-friends-list/view-friends-list.component.html
+++ b/src/app/friends/view-friends-list/view-friends-list.component.html
@@ -1,4 +1,6 @@
-<!-- group view component to show on dashboard -->
+<!-- Demo link -->
+<a routerLink="/friends/add" data-bs-toggle="modal" data-bs-target="#addFriendForm">add friends</a>
+<!-- friend view component to show on dashboard -->
 
 <div class="container-fluid p-0">
     <!-- section to collapse  -->
