--- a/src/app/settle-up/settle-up.component.html
+++ b/src/app/settle-up/settle-up.component.html
@@ -1,1 +1,62 @@
-<p>settle-up works!</p>
+<div class="container card p-0">
+    <div class="card-header">
+        <h1>Settle Up</h1>
+    </div>
+
+    <div class="group-info panel panel-default p-2">
+        <div class="panel-heading">
+            <h2>Group Name</h2>
+        </div>
+        <div class="panel-body">
+            <p>Total Amount: $100</p>
+            <p>Number of Members: 5</p>
+        </div>
+    </div>
+    <form action="#" method="post" class="form-horizontal p-5">
+        <div class="form-group ">
+            <label for="payer " class="col-sm-2 control-label ">Payer:</label>
+            <div class="col-sm-10 ">
+                <select id="payer " name="payer " class="form-control ">
+          <option value="user1 ">User 1</option>
+          <option value="user2 ">User 2</option>
+          <option value="user3 ">User 3</option>
+          <option value="user4 ">User 4</option>
+          <option value="user5 ">User 5</option>
+        </select>
+            </div>
+        </div>
+
+        <div class="form-group ">
+            <label for="receiver " class="col-sm-2 control-label ">Receiver:</label>
+            <div class="col-sm-10 ">
+                <select id="receiver " name="receiver " class="form-control ">
+          <option value="user1 ">User 1</option>
+          <option value="user2 ">User 2</option>
+          <option value="user3 ">User 3</option>
+          <option value="user4 ">User 4</option>
+          <option value="user5 ">User 5</option>
+        </select>
+            </div>
+        </div>
+
+        <div class="form-group ">
+            <label for="amount " class="col-sm-2 control-label ">Amount:</label>
+            <div class="col-sm-10 ">
+                <input type="number " id="amount " name="amount " min="0 " step="0.01 " class="form-control " required>
+            </div>
+        </div>
+
+        <div class="form-group ">
+            <label for="description " class="col-sm-2 control-label ">Description:</label>
+            <div class="col-sm-10 ">
+                <input type="text " id="description " name="description " class="form-control " required>
+            </div>
+        </div>
+
+        <div class="form-group ">
+            <div class="col-sm-offset-2 col-sm-10 ">
+                <button type="submit " class="btn btn-primary ">Settle Up</button>
+            </div>
+        </div>
+    </form>
+</div>
