Add required comments.

--- a/src/app/expense/view-expense-list/view-expense-list.component.html
+++ b/src/app/expense/view-expense-list/view-expense-list.component.html
@@ -1,10 +1,14 @@
+<!-- Expense list to show expenses  -->
 <ul class="list-group">
-    <li class="list-group-item align-center">
+    <!-- header row  -->
+    <li class="list-group-item align-center fw-bold">
         <div class="row">
-            <div class="col">Expense</div>
+            <div class="col">Expense list</div>
             <div class="col">Amount</div>
         </div>
     </li>
+
+    <!-- demo data from ts file -->
     <li class="list-group-item" *ngFor="let expense of expenses; index as i">
         <div class="row">
             <div class="col">{{expense}}</div>
@@ -13,6 +17,7 @@
     </li>
 </ul>
 
+<!-- modal to show add expanse form -->
 <div class="modal fade" id="addExpenseForm" tabindex="-1">
     <div class="modal-dialog ">
         <div class="modal-content ">
