--- a/src/app/group/view-group-list/view-group-list.component.html
+++ b/src/app/group/view-group-list/view-group-list.component.html
@@ -36,12 +36,15 @@
         <div class="card card-body" data-bs-toggle="collapse" data-bs-target="#collapseExpense" routerLink="/dashboard/group/expense">
             <div class="row">
                 <div class="col">
+
+                    <!-- collapse toggle on click on heading -->
                     <h3 routerLink="/dashboard/group/expense" data-bs-toggle="collapse" data-bs-target="#collapseExpense">Expenses:</h3>
                 </div>
                 <div class="col text-end">
                     <button class="btn btn-primary" routerLink="/dashboard/group/expense/add" data-bs-toggle="modal" data-bs-target="#addExpenseForm">Add Expense </button>
                 </div>
             </div>
+            <!-- route if is expanse is active -->
             <div class="row" *ngIf="isExpenseActive">
                 <div class="collapse" id="collapseExpense">
                     <!-- expenses list goes here  -->
