--- a/src/app/transaction/transaction-list.component.html
+++ b/src/app/transaction/transaction-list.component.html
@@ -1,1 +1,23 @@
-<p>transaction-list works!</p>
+<!-- Transaction list list to show expenses  -->
+<h2 class="card card-header text-center">Transaction List</h2>
+<ul class="card card-body list-group p-2">
+    <!-- header row  -->
+    <li class="list-group-item align-center fw-bold">
+        <div class="row">
+            <div class="col">Date</div>
+            <div class="col">Expense list</div>
+            <div class="col">Owed amount</div>
+            <div class="col">Owe amount</div>
+        </div>
+    </li>
+
+    <!-- demo data from ts file -->
+    <li class="list-group-item" *ngFor="let expense of expenses; index as i">
+        <div class="row">
+            <div class="col">{{dates[i]}} </div>
+            <div class="col">{{expense}}</div>
+            <div class="col">{{oweAmounts[i]}} INR</div>
+            <div class="col">{{owedAmounts[i]}} INR</div>
+        </div>
+    </li>
+</ul>
