Test design of splitwise

--- a/src/app/group/add-edit-group/add-edit-group.component.html
+++ b/src/app/group/add-edit-group/add-edit-group.component.html
@@ -58,7 +58,7 @@
 
     <!-- submit button -->
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" routerLink="/group">Close</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" routerLink="/dashboard/group">Close</button>
         <button type="submit" class="btn btn-primary">Save changes</button>
     </div>
 </form>
