--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -58,7 +58,7 @@
 
             <!-- submit button for sign up  -->
             <div class="form-control">
-                <button type="submit">Sign up</button>
+                <button type="submit" routerLink="/login">Sign up</button>
             </div>
 
         </form>
