--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,22 @@
 <div class="container">
-    <h3>Dashboard</h3>
+    <h2>Dashboard</h2>
+    <!-- show owe/owed and total amount  -->
+    <nav class="border border-success">
+        <div class="row text-center">
+            <div class="col">
+                <h3>You owe</h3>
+                <p>500 INR</p>
+            </div>
+            <div class="col">
+                <h3>You owed</h3>
+                <p>800 INR</p>
+            </div>
+            <div class="col">
+                <h3>Total Balance </h3>
+                <p>500 INR</p>
+            </div>
+        </div>
+    </nav>
     <div class="row">
         <!-- Sidebar content goes here in desktop view -->
         <nav class="col-md-3 p-2 d-none d-md-block bg-light sidebar">
@@ -35,15 +52,23 @@
                 <div class="card-body">
                     <ul class="list-group">
                         <li class="list-group-item" *ngFor="let friend of friends">
-                            <a class="text-decoration-none text-dark" class="text-decoration-none text-dark" [routerLink]="['friends/view',friend]" routerLinkActive="router-link-active">{{friend}}</a>
+                            <a class="text-decoration-none text-dark" class="text-decoration-none text-dark" [routerLink]="['/dashboard/friends/view',friend]">{{friend}}</a>
                         </li>
                     </ul>
+                </div>
+            </div>
+
+            <div class="card mb-2">
+                <div class="card-header p-2">
+                    <a class="text-black text-decoration-none" routerLink="/dashboard/transaction">Transaction list</a>
                 </div>
             </div>
 
         </nav>
 
         <!-- Sidebar content goes here in mobile view -->
+
+        <!-- group/friend list card -->
         <nav class="col-12 d-md-none bg-light sidebar">
             <div class="row ">
                 <div class="col col-sm">
@@ -84,13 +109,19 @@
                             <div class="card-body">
                                 <ul class="list-group">
                                     <li class="list-group-item" *ngFor="let friend of friends">
-                                        <a class="text-decoration-none text-dark" [routerLink]="['friends/view',friend]" routerLinkActive="router-link-active">{{friend}}</a>
+                                        <a class="text-decoration-none text-dark" [routerLink]="['/dashboard/friends/view',friend]">{{friend}}</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
 
+                </div>
+
+                <div class="col col-sm ">
+                    <div class="card-header p-2">
+                        <a class="text-black text-decoration-none" routerLink="/dashboard/transaction">Transaction list</a>
+                    </div>
                 </div>
             </div>
 
@@ -100,6 +131,8 @@
 
         <main role="main" class=" col mt-1 p-0">
             <!-- Main content goes here -->
+
+
 
             <!-- show component in routing -->
             <router-outlet></router-outlet>
