--- a/src/app/expense/view-expense-list/view-expense-list.component.html
+++ b/src/app/expense/view-expense-list/view-expense-list.component.html
@@ -3,16 +3,20 @@
     <!-- header row  -->
     <li class="list-group-item align-center fw-bold">
         <div class="row">
+            <div class="col">Date</div>
             <div class="col">Expense list</div>
-            <div class="col">Amount</div>
+            <div class="col">Owed amount</div>
+            <div class="col">Owe amount</div>
         </div>
     </li>
 
     <!-- demo data from ts file -->
     <li class="list-group-item" *ngFor="let expense of expenses; index as i">
         <div class="row">
+            <div class="col">{{dates[i]}} </div>
             <div class="col">{{expense}}</div>
-            <div class="col">{{amounts[i]}} INR</div>
+            <div class="col">{{oweAmounts[i]}} INR</div>
+            <div class="col">{{owedAmounts[i]}} INR</div>
         </div>
     </li>
 </ul>
