--- a/src/app/friends/view-friends-list/view-friends-list.component.html
+++ b/src/app/friends/view-friends-list/view-friends-list.component.html
@@ -1,5 +1,3 @@
-<!-- Demo link -->
-<a routerLink="/friends/add" data-bs-toggle="modal" data-bs-target="#addFriendForm">add friends</a>
 <!-- friend view component to show on dashboard -->
 
 <div class="container-fluid p-0">
@@ -8,11 +6,16 @@
 
         <!-- section Header -->
         <div class="card card-header" data-bs-toggle="collapse" data-bs-target="#collapseGroup">
-            <!-- group name  -->
-            <h3>
-                Friend Name :
-                <!-- Friend name goes here  -->
-            </h3>
+            <div class="row">
+                <div class="col">
+                    <h3>
+                        Ram
+                    </h3>
+                </div>
+                <div class="col text-end">
+                    <button class="btn btn-danger" routerLink="/dashboard/settleup">Settle Up</button>
+                </div>
+            </div>
         </div>
 
         <!-- section body -->
@@ -28,12 +31,28 @@
         </div>
 
         <!-- expenses of this roup will be displayed here -->
-        <div class="card card-body">
-            <h3>Expenses:</h3>
 
-            <!-- expense list goes here  -->
+        <div class="card card-body" data-bs-toggle="collapse" data-bs-target="#collapseExpense" routerLink="/dashboard/friends/expense">
+            <div class="row">
+                <div class="col">
+                    <!-- collapse toggle on click on heading -->
+                    <h3 routerLink="/dashboard/friends/expense" data-bs-toggle="collapse" data-bs-target="#collapseExpense">Expenses:</h3>
+                </div>
+                <div class="col text-end">
+                    <button class="btn btn-primary" routerLink="/dashboard/friends/expense/add" data-bs-toggle="modal" data-bs-target="#addExpenseForm">Add Expense </button>
+                </div>
+            </div>
+            <!-- route if is expanse is active -->
+            <div class="row" *ngIf="isExpenseActive">
+                <div class="collapse" id="collapseExpense">
+                    <!-- expenses list goes here  -->
+                    <router-outlet></router-outlet>
+                </div>
+            </div>
 
         </div>
+
+
     </section>
 
     <!--Edit Form Modal -->
