--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -34,11 +34,8 @@
 
             <!-- submit button -->
             <div class="form-control">
-                <button type="submit">Login</button>
+                <button type="submit" routerLink="/dashboard">Login</button>
             </div>
-
-            <!-- forgot password link -->
-            <div class="form-control"><a href="#">Forgot your password</a></div>
         </form>
     </div>
 </div>
